# adws-work

./: .adw.yaml  .coverage  .env  AGENTS.md  DOCUMENTATION.md  E2E_TEST_MESSAGES_FEATURE.md  PHASE_0_STATUS.md  PR_DETAILS.md  README.md  STORY_2_9_IMPLEMENTATION_SUMMARY.md  adw_review.py  debug_git.py  debug_plan.py  manual_test_story_2_2.py  opencode.json  pyproject.toml  pytest
ADWS/: README.md  config.yaml
ADWS/logs/: setup_20260115_151225.txt  setup_20260120_110919.txt  setup_20260202_123408.txt
Opencode/: 01-Getting-Started.md  02-Configuration-Guide.md  03-Agents-Architecture.md  04-MCP-and-Skills.md  05-CLI-Commands.md
_bmad-output/: EXECUTION_FEASIBILITY_ANALYSIS.md
_bmad-output/analysis/: brainstorming-session-2026-01-14.md
_bmad-output/implementation-artifacts/: 1-1-adws-state-cleanup.md  1-1-readme-setup-guide.md  story-001-git-hooks.md
_bmad-output/planning-artifacts/: bmm-workflow-status.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
adws.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent/: __init__.py  main.py
ai_docs/: ADW_ARCHITECTURE.md
ai_docs/jira/: epic_portable-adw-refactor.md  epic_test-app-skeleton.md  generic-prompts-refactoring-plan.md  python-scripts-comprehensive-plan.md  (+1 more)
docs/: DOCUMENTATION.md  OPENCODE_SERVER_INTEGRATION_GUIDE.md  PORTABLE_ADWS_MIGRATION.md  TEST_FRAMEWORK_SETUP.md  TROUBLESHOOTING.md  api-contracts.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  index.md  session_progress_jan20_2026.md  technology-stack.md  test-architecture.md  test-configuration-schema.md  token-limit-handling-brainstorm.md  token-management-test-audit-complete.md  token-management-testing-next-steps.md  token-management-testing-plan.md  token-management-testing-session-state.md
prompts/: agent-boilerplate.md  bug.md  chore.md  classify_issue.md  commit.md  feature.md  generate_branch_name.md  implement.md  new_agent.md  pull_request.md  review.md  review_patch.md
scripts/: adw_analyze.py  adw_build.py  adw_cli.py  adw_config_test.py  adw_init.py  adw_plan.py  adw_review.py  adw_setup.py  adw_test.py  jira_importer.py
test-app/: .dockerignore  .env  DOCKER.md  JIRA_TICKET_TEMPLATE.md  README.md  comprehensive-e2e-test.sh  corrected-e2e-test.sh  dev-agent-record.md  display-messages-e2e-test.sh  docker-compose.yml  e2e-test-execution.sh  package-lock.json  package.json
tests/: README.md  REFACTOR_BASELINE.md  REFACTOR_BREAKING_CHANGES.md  REFACTOR_PLAN.md  REMOVED_TESTS.md  TEST_VALIDATION_REPORT.md  conftest.py  mock_jira_issues.py  test_adw_analyze.py  test_adw_config_test.py  test_adw_init.py  test_adw_setup.py  test_agent_opencode_integration.py  test_build_plan_opencode_migration.py  test_console_parser.py  test_create_commit_migration.py  test_create_pull_request_migration.py  test_extract_adw_info_migration.py  test_generate_branch_name_migration.py  test_git_ops_commit.py  test_global_prompt_logging_integration.py  test_hook_resolution.py  test_jira_issues.py  test_model_limits.py  test_opencode_config.py  test_opencode_http_client.py  test_opencode_logging_error_handling.py  test_opencode_response_parsing.py  test_output_parser.py  test_parsing_functions.py  test_parsing_functions.py.bak  test_plan_generation_integration.py  test_portable_architecture.py  test_setup_jest.py  test_state_cleanup.py  test_story_2_8_error_handling.py  test_story_2_9_planning_operations_integration.py  test_story_3_1_implement_plan_migration.py  test_story_3_2_resolve_failed_tests_migration.py  test_story_3_3_execute_single_e2e_test_migration.py  (+10 more)
(+970 files in other folders)
