[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adws"
version = "0.1.0"
description = "AI Developer Workflow System - Autonomous planning, building, testing, and reviewing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ADWS Contributors"}
]
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
    "requests",
    "jira>=3.0,<4.0",
    "rich>=13.0",
    "boto3",  # Optional: Only used by isolated bedrock_agent.py; can be removed if not needed
    "pyyaml",
    "click>=8.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.scripts]
adw = "scripts.adw_cli:main"

[tool.setuptools]
# Use automatic package discovery to avoid listing non-existent packages like `agent`.
[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "prompts*"]

[tool.setuptools.package-data]
scripts = ["**/*.yaml", "**/*.md"]
prompts = ["**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests - fast, isolated tests of individual components",
    "integration: Integration tests - tests that involve multiple components or external systems",
    "slow: Slow running tests - tests that take more than 1 second",
    "git: Tests that involve git operations",
    "cli: Tests for CLI commands and interfaces",
    "parser: Tests for parsing functionality",
    "config: Tests for configuration management",
    "hooks: Tests for hook functionality",
    "token: Tests for token management",
    "logging: Tests for logging functionality",
    "opencode: Tests for opencode functionality",
]
# Test discovery patterns
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", "node_modules"]
# Output options
console_output_style = "progress"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
